...
    android:orientation="vertical"
    tools:context="com.spartanmart.activities.authentication.RegisterActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEmail"
        android:hint="@string/email"
        android:textColorHint="#2090f9"
        android:textColor="#2090f9"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="10dp"
        android:layout_marginLeft="20dp"
...
        android:inputType="textEmailAddress"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        android:hint="@string/password"
        android:textColorHint="#2090f9"
        android:textColor="#2090f9"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="10dp"
        android:layout_marginLeft="20dp"
...
